Opened 6 months ago

Closed 6 months ago

#18999 closed bug (fixed)

Menu fields in "Find" window don't show correctly

Reported by: Begasus Owned by: jscipione
Priority: normal Milestone: R1/beta5
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by jscipione)

Not sure it was reported but I'll add it here anyway. As shown in the attached screenshot you can see the dropdown menu for "All files and folders" has a glitch on the right, when running locales in English it shows correctly.

Edit: The bug does not only appear in Dutch, it also appears in English (and other languages) on long strings overflowing the pop-up indicator.

Attachments (2)

Find.png (6.9 KB ) - added by Begasus 6 months ago.
Glitch in "Find" application with locales set to Dutch.
beforeafterfindmenufields.png (38.0 KB ) - added by jscipione 6 months ago.

Download all attachments as: .zip

Change History (6)

by Begasus, 6 months ago

Attachment: Find.png added

Glitch in "Find" application with locales set to Dutch.

comment:1 by waddlesplash, 6 months ago

Component: - GeneralApplications/Tracker
Milestone: UnscheduledR1/beta6

comment:2 by jscipione, 6 months ago

Description: modified (diff)
Owner: changed from nobody to jscipione
Status: newassigned
Summary: Layout grid in "Find" doesn't show correctly when swithed locales to DutchMenu fields in "Find" window don't show correctly
Version: R1/beta5R1/Development

by jscipione, 6 months ago

comment:4 by waddlesplash, 6 months ago

Milestone: R1/beta6R1/beta5
Resolution: fixed
Status: assignedclosed

Fixed in hrev58029, and will be merged into beta5 too.

Note: See TracTickets for help on using tickets.