Tracker: Fix "Find" window menu field truncating

Minimum menu field width is set by "multiple selections" string width.
Maximum menu field width chosen to match current based on font size.

Set the max content width to truncate long mime-type names that don't
fit. Add room for the pop-up indicator.

Create member variables to hold menu fields. Resize the menu fields in
AttachedToWindow() after they have been marked because the width
depends on the marked item.

Set member pointers to NULL in constructor where not already set.
Put a couple of strings used multiple times into variables.
ASSERT that variables we use are not NULL, they are not but check.
100-char limit fixes.

Use DefaultLabelSpacing() for the spacing between icon and text to make
them font sensitive. DefaultLabelSpacing() is 5px at 12pt font matching
current.

Fixes #18999

Change-Id: I0e52b5aa557c8b5d76f09e0b60fcb965e3ff65e0